crates/oxc_css_parser/tests/recoverable/declaration/top-level-number.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: declaration at top level is disallowed
  ┌─ top-level-number.css:1:1
  │
1 │ height: 1234
  │ ^^^^^^^^^^^^
